modified style for ball

--- a/Client/style.css
+++ b/Client/style.css
@@ -7,7 +7,7 @@
     border-left: 2px dashed #000;
     border-right: 2px dashed #000;
 }
-#logo {
+#ball {
     width: 100px; 
     position: absolute;
     /*left: 300px;*/
