--- a/Client/style.css
+++ b/Client/style.css
@@ -12,6 +12,12 @@
     position: absolute;
     /*left: 300px;*/
 }
+
+#team1logo #team2logo {
+ width: 100px;
+ position: absolute;
+}
+
 .teamNameDisplay {
     font-weight: bold;
     font-size: 1.5em;
